# Fecho

./: .gitignore  COPYING  README
Fecho.xcworkspace/: contents.xcworkspacedata
Fecho.xcworkspace/xcuserdata/chris.xcuserdatad/: UserInterfaceState.xcuserstate
FechoTest/FechoTest/: FechoTest.1  main.cpp
FechoTest/FechoTest.xcodeproj/: project.pbxproj
FechoTest/FechoTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FechoTest/FechoTest.xcodeproj/project.xcworkspace/xcuserdata/chris.xcuserdatad/: UserInterfaceState.xcuserstate
FechoTest/FechoTest.xcodeproj/xcuserdata/chris.xcuserdatad/xcschemes/: FechoTest.xcscheme  xcschememanagement.plist
example/: main.cpp
example/xcode/FechoExample/FechoExample/: FechoExample.1
example/xcode/FechoExample/FechoExample.xcodeproj/: project.pbxproj
example/xcode/FechoExample/FechoExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example/xcode/FechoExample/FechoExample.xcodeproj/project.xcworkspace/xcshareddata/: FechoExample.xccheckout
example/xcode/FechoExample/FechoExample.xcodeproj/project.xcworkspace/xcuserdata/chris.xcuserdatad/: UserInterfaceState.xcuserstate
example/xcode/FechoExample/FechoExample.xcodeproj/xcuserdata/chris.xcuserdatad/xcschemes/: FechoExample.xcscheme  xcschememanagement.plist
libFecho/: dSFMTRand.h  fecho.h  fechoActivations.h  fechoMath.h  fechoUtil.h
libFecho/dSFMT/: dSFMT.h
libFecho/libFecho.xcodeproj/: project.pbxproj
libFecho/libFecho.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libFecho/libFecho.xcodeproj/project.xcworkspace/xcuserdata/chris.xcuserdatad/: UserInterfaceState.xcuserstate
libFecho/libFecho.xcodeproj/xcuserdata/chris.xcuserdatad/xcschemes/: libFecho.xcscheme  xcschememanagement.plist
pd/: CMakeLists.txt  README  arraySearch.pd  fecho-help-drum-classifier.pd  fecho-help-drum.pd  fecho-help-evo.pd  fecho-help-fft1.pd  fecho-help-manual_weights.pd  fecho-help-oneToMany.pd  fecho-help.pd  fecho-joystick.pd  fecho-pd.cpp  listToArray.pd  multiTable-help.pd  multiTable.pd  recordInto_test.pd  recordInto~.pd  sampleContainer.pd  timeroll.pd
src/: fecho.hpp  fechoActivations.hpp  fechoUtil.hpp
src/armadillo_bits/: config.hpp  config.hpp.cmake  debug.hpp
